--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                 <strong> 5,5K+</strong>Markets
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
       </div>
@@ -268,6 +269,7 @@
                 <strong> 400+</strong> Live events
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
         </div>
@@ -290,6 +292,7 @@
                 <strong> 1</strong> Integration
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
       </div>
@@ -328,6 +331,7 @@
                 <strong> 1</strong> Integration
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
       </div>
@@ -351,6 +355,7 @@
                 <strong> 1</strong>  Integration
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
         </div>
@@ -373,6 +378,7 @@
                 <strong> 1</strong> Integration
               </li>
             </ul>
+            <button class="btn_all">Learn more<img src="assets/img/arrow-next.png"></button>
           </div>
         </div>
       </div>
