--- a/index.html
+++ b/index.html
@@ -696,13 +696,23 @@
     <h3>Follow us</h3>
     <ul class="footer_nav social_icon d-flex">
       <li>
-        <a href="#"><img src="assets/img/lin-icon.svg"></a>
+        <a href="#"><i class="fa fa-linkedin-in"></i></a>
       </li>
       <li>
-        <a href="#"><img src="assets/img/face-icon.svg"></a>
+        <a href="#"><i class="fa fa-facebook-f"></i></a>
       </li>
       <li>
-        <a href="#"><img src="assets/img/you-icon.svg"></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+      </li>
+
+      <li>
+        <a href="#"><i class="fa fa-pinterest-p"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-youtube"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-vk"></i></a>
       </li>
     </ul>
   </div>
@@ -716,7 +726,7 @@
   <div class="w-auto" style="width: 78% !important;">
     <div class="footer-inner">
       <img src="assets/img/logo.png" class="mb-3" width="150" />
-      <p class="mb-3">Copyright © 2022 «Uplatform». All rights reserved and protected by law.</p>
+      <p class="mb-3">© 2015 - 2021 By Mobzway Technologies. All Rights Reserved.</p>
       <p class="mb-3">Uplatform uses cookies to enhance your website experience. By staying on the website, you agree to the use of these cookies. <a href="#" style="color:#f98633;">Find out more</a> </p>
     </div>
   </div>
@@ -725,6 +735,18 @@
   </div>
 </div>
 </div>
+</footer>
+
+<!-- Chat btn -->
+
+<button class="chat_btn chat_btn_dsk"><i class="fa fa-envelope"></i> Send us your inquiry</button>
+<a href="#" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
+<div class="container-fluid fix_chat">
+  <a href="#" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
+  <a href="#" class="whatsapp_chat btn_chat" style="background: #fcd10a;"><i class="fa fa-phone-alt" style="color: #000;"></i></a>
+  <button class="chat_btn btn_chat" style="background:#6e00a3;transform: none;box-shadow: none;"><i class="fa fa-envelope"></i></button>
+</div>
+<!-- Chat btn End! -->
 
 
 <script>
