--- a/index.html
+++ b/index.html
@@ -726,12 +726,12 @@
   <div class="w-auto" style="width: 78% !important;">
     <div class="footer-inner">
       <img src="assets/img/logo.png" class="mb-3" width="150" />
-      <p class="mb-3">© 2015 - 2021 By Mobzway Technologies. All Rights Reserved.</p>
-      <p class="mb-3">Uplatform uses cookies to enhance your website experience. By staying on the website, you agree to the use of these cookies. <a href="#" style="color:#f98633;">Find out more</a> </p>
+      <p class="mb-3">© 2015 - 2021 By Mobzway Technologies. All Rights Reserved.| <a href="#" style="color: #484848;font-size: 14px;text-decoration: none;">Privacy Policy</a> | <a href="#" style="color: #484848;font-size: 14px;text-decoration: none;">Terms &amp; Conditions</a></p>
+      
     </div>
   </div>
   <div class="w-auto" style="width: 22% !important;">
-    <img src="assets/img/captcha.png" style="width:100%;padding-top: 45px;">
+    <img src="assets/img/captcha.png" style="width:100%;padding-top: 15px;">
   </div>
 </div>
 </div>
