--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header class="container-fluid header">
   <div class="header__wrapper row justify-content-between align-items-center">
     <div class="w-auto header_logo">
-      <a href="index.php">
+      <a href="index.html">
       <img src="assets/img/logo.png" />
     </a>
     </div>
@@ -769,6 +769,15 @@ function openCity(evt, cityName) {
     $(this).toggleClass("mobile_menu_open");
     $(".header_nav").toggleClass("header_nav_open");
   });
+</script>
+<script>
+  $(document).on('scroll', function() {
+              if ($(window).scrollTop() > 50) {
+                  $('header.header').addClass('sticky');
+              } else {
+                  $('header.header').removeClass('sticky');
+              }
+          });
 </script>
 
 </footer>
