--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
 <body>
 
 <header class="container-fluid header">
+  <div class="row">
+    <div class="col-md-12">
+      <ul class="header_top_contact">
+        <li>
+          <a href="tel:+91-9116005595"><i class="fa fa-whatsapp"></i> +91-9116005595</a>
+        </li>
+        <li>
+          <a href="tel:+91-7878-044-044"><i class="fa fa-phone-alt"></i>+91-7878-044-044</a>
+        </li>
+        <li>
+          <a href="mailto:sales@mobzway.com"><i class="fa fa-envelope"></i>sales@mobzway.com</a>
+        </li>
+      </ul>
+    </div>
+  </div>
   <div class="header__wrapper row justify-content-between align-items-center">
     <div class="w-auto header_logo">
       <a href="index.html">
@@ -563,7 +578,7 @@
 <footer class="container-fluid">
   <div class="container">
     <div class="row" style="padding-bottom: 90px;">
-      <div class="col-md-5">
+      <div class="col-md-4">
   <div class="sub-title"> <span class="color-accent"></span> CONTACT US</div>
   <h2 class="block_title"> We are just click away</h2>
   <div class="w-100">
@@ -592,111 +607,174 @@
   </div>
 </div>  
 
-<div class="col-md-1"></div>
-<div class="col-md-6">
+
+<div class="col-md-8" style="padding-left:50px;">
   <div class="row">
 <div class="col-md-4">
   <div class="contact-item">
-    <h3>Usports</h3>
+    <h3>Company</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Sports</a>
+        <a href="#">Blog</a>
       </li>
       <li>
-        <a href="#">Esports</a>
+        <a href="#">Careers</a>
       </li>
       <li>
-        <a href="#">Virtual sports</a>
+        <a href="#">About Us</a>
       </li>
       <li>
-        <a href="#">Non-sports betting</a>
+        <a href="#">Contact Us</a>
+      </li>
+      <li>
+        <a href="#">Portfolio</a>
+      </li>
+      <li>
+        <a href="#">Brochure</a>
+      </li>
+      <li>
+        <a href="#">Work Culture</a>
+      </li>
+      <li>
+        <a href="#">Write for Us</a>
+      </li>
+      <li>
+        <a href="#">Our Specialization</a>
+      </li>
+      <li>
+        <a href="#">Awards & Recognition</a>
       </li>
     </ul>
   </div>
   
-</div>
-<div class="col-md-4">
-  <div class="contact-item">
-    <h3>Ucasino</h3>
-    <ul class="footer_nav">
-      <li>
-        <a href="#">Slots</a>
-      </li>
-      <li>
-        <a href="#">Live Casino</a>
-      </li>
-      <li>
-        <a href="#">Additional games</a>
-      </li>
-      <li>
-        <a href="#">Skill-based games</a>
-      </li>
-    </ul>
-  </div>
-  
-</div>
-<div class="col-md-4">
-  <div class="contact-item">
-    <h3>Utools</h3>
-    <ul class="footer_nav">
-      <li>
-        <a href="#">Back Office</a>
-      </li>
-      <li>
-        <a href="#">Bonus system</a>
-      </li>
-      <li>
-        <a href="#">CRM</a>
-      </li>
-      <li>
-        <a href="#">CMS</a>
-      </li>
-      <li>
-        <a href="#">Affiliate Program</a>
-      </li>
-      <li>
-        <a href="#">Agent scheme</a>
-      </li>
-      <li>
-        <a href="#">Upayment</a>
-      </li>
-      <li>
-        <a href="#">Support</a>
-      </li>
-    </ul>
-  </div>
 </div>
 <div class="col-md-4">
   <div class="contact-item">
     <h3>Solutions</h3>
     <ul class="footer_nav">
       <li>
-        <a href="#">Turnkey</a>
+        <a href="#">Poker Software</a>
       </li>
       <li>
-        <a href="#">API</a>
+        <a href="#">Casino Software</a>
       </li>
       <li>
-        <a href="#">Betshop Solutions</a>
+        <a href="#">Rummy Software</a>
       </li>
       <li>
-        <a href="#">iGaming in Africa</a>
+        <a href="#">Teen Patti Software</a>
       </li>
       <li>
-        <a href="#">iGaming in Latam</a>
+        <a href="#">Live Casino Software</a>
       </li>
       <li>
-        <a href="#">iGaming in Asia</a>
+        <a href="#">White Label Casino</a>
+      </li>
+      <li>
+        <a href="#">White Label Poker</a>
+      </li>
+      <li>
+        <a href="#">iGaming Software</a>
+      </li>
+    </ul>
+  </div>
+  
+</div>
+<div class="col-md-4">
+  <div class="contact-item">
+    <h3>Service</h3>
+    <ul class="footer_nav">
+      <li>
+        <a href="#">Poker Game Development</a>
+      </li>
+      <li>
+        <a href="#">Rummy Game Development</a>
+      </li>
+      <li>
+        <a href="#">Teen Patti Game Development</a>
+      </li>
+      <li>
+        <a href="#">Pool Game Development</a>
+      </li>
+      <li>
+        <a href="#">Card Game Development</a>
+      </li>
+      <li>
+        <a href="#">Ludo Game Development</a>
+      </li>
+      <li>
+        <a href="#">BlackJack Game Development</a>
+      </li>
+      <li>
+        <a href="#">Baccarat Game Development</a>
+      </li>
+      <li>
+        <a href="#">Roulette Game Development</a>
       </li>
     </ul>
   </div>
 </div>
-<!-- <div class="col-md-4">
+<div class="col-md-4">
   <div class="contact-item">
-    <h3>Follow us</h3>
-    
+    <h3>More</h3>
+    <ul class="footer_nav">
+      <li>
+        <a href="#">Texas Holdem Poker</a>
+      </li>
+      <li>
+        <a href="#">Seven Stud Poker</a>
+      </li>
+      <li>
+        <a href="#">Omaha Poker Game</a>
+      </li>
+      <li>
+        <a href="#">Andar Bahar Game</a>
+      </li>
+      <li>
+        <a href="#">Triple Chance Game</a>
+      </li>
+      <li>
+        <a href="#">Slot Game Development</a>
+      </li>
+      <li>
+        <a href="#">Bingo Software Development</a>
+      </li>
+      <li>
+        <a href="#">Keno Game Development</a>
+      </li>
+      <li>
+        <a href="#">OFC Poker Game Development</a>
+      </li>
+    </ul>
   </div>
-</div> -->
+</div>
+<div class="col-md-4">
+  <div class="contact-item">
+    <h3>Get In Touch</h3>
+    <ul class="footer_nav">
+      <li>
+        <a href="#"><i class="fa fa-phone-alt"></i> +91 – 7878044044</a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-phone-alt"></i> +91 – 9116005587(HR)</a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-skype"></i> sales.mobzway</a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-envelope"></i> sales@mobzway.com</a>
+      </li>
+      <li>
+        <a href="#"><i class="fa-solid fa-location-crosshairs"></i> 
+G-4, Okay Plus Spaces,
+Malviya Nagar Industrial
+Area Jaipur, (Raj) India
+302017
+</a>
+      </li>
+    </ul>
+  </div>
+</div>
 
 </div>
 </div>
