--- a/index.html
+++ b/index.html
@@ -772,6 +772,9 @@ Area Jaipur, (Raj) India
 302017
 </a>
       </li>
+      <li>
+        <a href="#"><img src="assets/img/dmca.png" /></a>
+      </li>
     </ul>
   </div>
 </div>
