--- a/index.html
+++ b/index.html
@@ -577,11 +577,10 @@
 <div class="container-fluid getin_touch py-indent">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div class="sub-title text-white"> <span class="color-accent" style="border-color: #f98633;"></span> STAY INFORMED</div>
+      <div class="col-md-12 text-center">
         <h2 class="block_title text-white">Start your business journey with Mobzway</h2>
         <p class="text-white">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
-        <button class="btn_all btn_try_demo">Try Demo <img src="assets/img/arrow-next.png"></button>
+        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo</button>
       </div>
     </div>
   </div>
