--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2 class="block_title text-white">Start your business journey with Mobzway</h2>
-        <p class="text-white">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
+        <h2 class="block_title">Start your business journey with Mobzway</h2>
+        <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
         <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo</button>
       </div>
     </div>
