--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <header class="container-fluid header">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 mb-center">
+      <a href="tel:7878 044 044" class="mb_desk align-items-center call_btn"><i class="fa fa-phone-alt"></i> 7878 044 044 <strong>Call Us Now!</strong></a>
       <ul class="header_top_contact">
         <li>
           <a href="tel:+91-9116005595"><i class="fa fa-whatsapp"></i> +91-9116005595</a>
