--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ Area Jaipur, (Raj) India
 
  <!-- Send us your inquiry -->
 
-<div class="modal fade request_qoute" id="sendusyourinquiry" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade request_qoute right_modal" id="sendusyourinquiry" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header flex-wrap text-center justify-content-center" style="background-color: #ffe8d7;border-top:2px solid #ff7f00">
