--- a/index.html
+++ b/index.html
@@ -1000,13 +1000,9 @@ Area Jaipur, (Raj) India
                                 
                                 <input type='text' id='Mobile' class="forminput" placeholder="Mobile" name='Mobile' maxlength='30'>
                             </div>
-                            <div class="col-md-12 mb-3">
-                              <select class="form-select" aria-label="Default select example">
-                                <option selected>Requirement</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                              </select>
+                            <div class="col-md-12 mb-3 d-mobile">
+                                
+                                <textarea id="" placeholder="Requirement" name="Description"></textarea>
                             </div>
                             <div class="col-md-12">
                               <div class="mb-3 form-check">
