--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </button>
     <div class="header_nav w-auto">
       <ul class="navbar-nav header_nav_menu d-flex">
-        <li class="nav-item dropdown">
-          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Solutions</a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li class="nav-item dropdown_menu">
+          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Solutions</a>
+          <ul class="sub-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Turnkey</a></li>
             <li><a class="dropdown-item" href="#">Usports API</a></li>
             <li><a class="dropdown-item" href="#">Betshop Solutions</a></li>
