--- a/index.html
+++ b/index.html
@@ -1005,13 +1005,13 @@ Area Jaipur, (Raj) India
                                 <textarea id="" placeholder="Requirement" name="Description"></textarea>
                             </div>
                             <div class="col-md-12">
-                              <div class="mb-3 form-check">
+                              <div class="mb-2 form-check">
                               <input type="checkbox" class="form-check-input" id="exampleCheck2">
                               <label class="form-check-label" for="exampleCheck2"> Please confirm you <a href="#">consent</a> to your personal information being processed and shared with third parties</label>
                             </div>
                             </div>
 
-                             <div class="col-md-12">
+                             <div class="col-md-12 mb-2">
                                 <label for="">Captcha </label>
                                 <center>
                                 <div class="zcwf_col_fld"><div class='g-recaptcha' data-sitekey='6LerTcAZAAAAAPCp-yqkRPmgR8ihu3CrcIZA0bD-' data-theme='light' data-callback='rccallback1742164000001858039' captcha-verified='false' id='recap1742164000001858039'></div>
