--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       <div class="col-md-12 text-center">
         <h2 class="block_title">Start your business journey with Mobzway</h2>
         <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
-        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo</button>
+        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
       </div>
     </div>
   </div>
