--- a/index.html
+++ b/index.html
@@ -1094,10 +1094,17 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 <script>
   $(document).on('scroll', function() {
-              if ($(window).scrollTop() > 50) {
+              if ($(window).scrollTop() > 100) {
                   $('header.header').addClass('sticky');
               } else {
                   $('header.header').removeClass('sticky');
+              }
+          });
+  $(document).on('scroll', function() {
+              if ($(window).scrollTop() > 120) {
+                  $('body').addClass('sticky_body');
+              } else {
+                  $('body').removeClass('sticky_body');
               }
           });
 </script>
