--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </div>
 </div>
 
-<div class="container-fluid block-solutions py-indent">
+<div class="container-fluid block-solutions py-indent pt-0">
   <div class="container">
   <div class="row">
     <div class="col-md-12">
