--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-      <h1>Sports betting and online casino platform</h1>
+      <h1>Best Poker, Rummy, Casino Gaming Solution</h1>
       <h3>Our Platform. Your Success</h3>
       <p>Turn your ideas into profits! Start a new business or expand an existing one – Uplatform is your assured partner on the road to achieving your goals.</p>
       <p><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
