--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
       <p><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
       <div class="col-lg-6">
-        <img src="assets/img/banner.png" class="w-100">
+        <!-- <img src="assets/img/banner.png" class="w-100"> -->
+        <div class="w-100 banner_grid">
+            <img src="assets/img/01-16.png" class="w-100">
+            <img src="assets/img/01-16.png" class="w-100">
+            <img src="assets/img/01-16.png" class="w-100">
+            <img src="assets/img/t9.png" class="w-100">
+          </div>
       </div>
     </div>
 
