--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
-            <img src="assets/img/t9.png" class="w-100">
+            <img src="assets/img/01-16.png" class="w-100">
           </div>
       </div>
     </div>
