--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/aos.css">
  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap" rel="stylesheet">  
 
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/owl.carousel.js"></script>
+<script src="assets/js/aos.js"></script>
 </head>
 <body>
-
-<header class="container-fluid header">
+<div class="full_page">
+<header class="container-fluid header" data-aos="fade-up">
   <div class="row">
     <div class="col-md-12 mb-center">
       <a href="tel:7878 044 044" class="mb_desk align-items-center call_btn"><i class="fa fa-phone-alt"></i> 7878 044 044 <strong>Call Us Now!</strong></a>
@@ -95,14 +97,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-      <h1>Best Poker, Rummy, Casino Gaming Solution</h1>
-      <h3>Our Platform. Your Success</h3>
-      <p>Turn your ideas into profits! Start a new business or expand an existing one – Uplatform is your assured partner on the road to achieving your goals.</p>
-      <p><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
+      <h1 data-aos="fade-right">Best Poker, Rummy, Casino Gaming Solution</h1>
+      <h3 data-aos="fade-right">Our Platform. Your Success</h3>
+      <p data-aos="fade-up">Turn your ideas into profits! Start a new business or expand an existing one – Uplatform is your assured partner on the road to achieving your goals.</p>
+      <p data-aos="fade-up"><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
       <div class="col-lg-6">
         <!-- <img src="assets/img/banner.png" class="w-100"> -->
-        <div class="w-100 banner_grid">
+        <div class="w-100 banner_grid" data-aos="fade-left">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
@@ -118,12 +120,12 @@
   <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="sub-title"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
-        <h2 class="block_title">Unrivalled Solutions</h2>
+      <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
+        <h2 class="block_title" data-aos="fade-down">Unrivalled Solutions</h2>
     </div>
   </div>
   <div class="row sec_mt" style="padding-bottom:15px;">
-    <div class="col-md-4">
+    <div class="col-md-4" data-aos="fade-right">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/turnkey-svg.svg"></span>Turnkey</h2>
         <p>Build a profitable and stable brand with an all-in-one solution:</p>
@@ -136,7 +138,7 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4" data-aos="fade-up">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/api-svg.svg"></span>Sportsbook API</h2>
         <p>Want to expand your existing project? Our effective sportsboook API will provide you:</p>
@@ -148,7 +150,7 @@
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" data-aos="fade-left">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/Frame-body.svg"></span>Betshop solutions</h2>
         <p>Take advantage of our knowledge of retail betting and the most comprehensive software:</p>
@@ -169,12 +171,12 @@
   <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="sub-title text-white"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
-        <h2 class="block_title text-white mb-0">Unrivalled Solutions</h2>
+      <div class="sub-title text-white" data-aos="fade-up"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
+        <h2 class="block_title text-white mb-0" data-aos="fade-down">Unrivalled Solutions</h2>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-right">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/win-svg.svg" alt="Ultimate sportsbook" />
@@ -185,7 +187,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-up">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/disk-svg.svg" alt="Ultimate sportsbook" />
@@ -196,7 +198,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-left">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/why-3.svg" alt="Ultimate sportsbook" />
@@ -209,7 +211,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-right">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/why-4.svg" alt="Ultimate sportsbook" />
@@ -220,7 +222,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-up">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/why-5.svg" alt="Ultimate sportsbook" />
@@ -231,7 +233,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 sec_mt">
+    <div class="col-md-4 sec_mt" data-aos="fade-left">
       <div class="w-100 d-flex align-items-start">
         <div class="sportsbook_icon">
           <img src="assets/img/why-6.svg" alt="Ultimate sportsbook" />
@@ -429,8 +431,8 @@
     </div>
     <div class="col-md-7" style="padding-left: 90px;">
       <div class="col-md-12">
-      <div class="sub-title"> <span class="color-accent"></span> VIRTUOSO OF BETTING AND CASINO PRODUCTS</div>
-        <h2 class="block_title">Our Products</h2>
+      <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> VIRTUOSO OF BETTING AND CASINO PRODUCTS</div>
+        <h2 class="block_title" data-aos="fade-down">Our Products</h2>
         <p class="sec_mt">Experience and connect to an array of casino and sports betting products to bring more value to your betting and casino business today. From our awarded Sportsbook and a wide selection of slots to Live Casino games, Bingo and TOTO, we’ve got all you need to boost you to that next level.</p>
     </div>
     <div class="row" style="margin-top: 45px">
@@ -462,8 +464,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="sub-title"> <span class="color-accent"></span>  DELIVERING MORE</div>
-        <h2 class="block_title">Optimized Services</h2>
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>  DELIVERING MORE</div>
+        <h2 class="block_title" data-aos="fade-down">Optimized Services</h2>
       </div>
     </div>
     <div class="row">
@@ -527,14 +529,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="sub-title"> <span class="color-accent"></span> IT’S ALL ABOUT YOU</div>
-        <h2 class="block_title">Uplatform – solutions with a personal approach</h2>
+        <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> IT’S ALL ABOUT YOU</div>
+        <h2 class="block_title" data-aos="fade-down">Uplatform – solutions with a personal approach</h2>
       </div>
       <div class="col-md-6">
         <div class="w-100">
-          <p> Our unique solutions are built on practical knowledge and market experience, empowering you with an industry-leading sportsbook, the complete choice of products, and all the essential additional services. You’ll be Holing all the Aces, ensuring players are satisfied and entertained, your operations are smooth and on-track, and your project is enduring and delivers profitable results.</p>
-          <p> We place the highest value on support and partnership amongst all the importance of our business, and we view our achievements through the successful realization of your ideas. With our “your problem is our problem” approach, we help you succeed and accomplish fantastic results, enabling us to strive and improve as a dynamic market leader.</p>
-          <button class="btn_all" style="width: 282px;height: 62px;background: #FF7F00;margin-top: 35px;">Learn more <img src="assets/img/arrow-next.png"></button>
+          <p data-aos="fade-left"> Our unique solutions are built on practical knowledge and market experience, empowering you with an industry-leading sportsbook, the complete choice of products, and all the essential additional services. You’ll be Holing all the Aces, ensuring players are satisfied and entertained, your operations are smooth and on-track, and your project is enduring and delivers profitable results.</p>
+          <p data-aos="fade-left"> We place the highest value on support and partnership amongst all the importance of our business, and we view our achievements through the successful realization of your ideas. With our “your problem is our problem” approach, we help you succeed and accomplish fantastic results, enabling us to strive and improve as a dynamic market leader.</p>
+          <button data-aos="fade-up" class="btn_all" style="width: 282px;height: 62px;background: #FF7F00;margin-top: 35px;">Learn more <img src="assets/img/arrow-next.png"></button>
         </div>
       </div>
     </div>
@@ -586,7 +588,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2 class="block_title">Start your business journey with Mobzway</h2>
+        <h2 class="block_title" data-aos="fade-down">Start your business journey with Mobzway</h2>
         <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
         <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
       </div>
@@ -601,8 +603,8 @@
   <div class="container">
     <div class="row" style="padding-bottom: 90px;">
       <div class="col-md-4">
-  <div class="sub-title"> <span class="color-accent"></span> CONTACT US</div>
-  <h2 class="block_title"> We are just click away</h2>
+  <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> CONTACT US</div>
+  <h2 class="block_title" data-aos="fade-down"> We are just click away</h2>
   <div class="w-100">
     <form class="footer_form">
       <div class="d-flex">
@@ -839,6 +841,11 @@ Area Jaipur, (Raj) India
 </div>
 </div>
 </footer>
+
+<!-- Footer End! -->
+
+</div>
+
 
 <!-- Chat btn -->
 
@@ -1256,6 +1263,9 @@ $(window).scroll(function() {
   }
 
 });
+</script>
+<script>
+  AOS.init();
 </script>
 
 </body>
