--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div class="full_page">
-<header class="container-fluid header" data-aos="fade-up">
+<header class="container-fluid header">
   <div class="row">
     <div class="col-md-12 mb-center">
       <a href="tel:7878 044 044" class="mb_desk align-items-center call_btn"><i class="fa fa-phone-alt"></i> 7878 044 044 <strong>Call Us Now!</strong></a>
