--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 <div class="full_page">
 <header class="container-fluid header">
+  <div class="header_inner">
   <div class="row">
     <div class="col-md-12 mb-center">
       <a href="tel:7878 044 044" class="mb_desk align-items-center call_btn"><i class="fa fa-phone-alt"></i> 7878 044 044 <strong>Call Us Now!</strong></a>
@@ -87,6 +88,7 @@
       </ul>
     </div>
   </div>
+</div>
 </header>
 
 <!-- Header End! -->
