--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
   <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="sub-title text-white" data-aos="fade-up"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
-        <h2 class="block_title text-white mb-0" data-aos="fade-down">Unrivalled Solutions</h2>
+      <div class="sub-title text-white" data-aos="fade-up"> <span class="color-accent"></span>  BUSINESS DONE RIGHT</div>
+        <h2 class="block_title text-white mb-0" data-aos="fade-down">Why Mobzway</h2>
     </div>
   </div>
   <div class="row">
