--- a/index.html
+++ b/index.html
@@ -53,27 +53,35 @@
     </button>
     <div class="header_nav w-auto">
       <ul class="navbar-nav header_nav_menu d-flex">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
         <li class="nav-item dropdown_menu">
-          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Solutions</a>
+          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Game Development Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Turnkey</a></li>
-            <li><a class="dropdown-item" href="#">Usports API</a></li>
-            <li><a class="dropdown-item" href="#">Betshop Solutions</a></li>
+            <li><a class="dropdown-item" href="#">Mobile Game Development</a></li>
+            <li><a class="dropdown-item" href="#">Desktop Game Development</a></li>
+            <li><a class="dropdown-item" href="#">Web3 Game Development</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Usports</a>
+        <li class="nav-item dropdown_menu">
+          <a class="nav-link active dropdown-toggle" id="Technologyservice" role="button">Technology Services </a>
+          <ul class="sub-menu" aria-labelledby="Technologyservice">
+            <li><a class="dropdown-item" href="#">Unity3D Game Development</a></li>
+            <li><a class="dropdown-item" href="#">HTML5 Game Development</a></li>
+            <li><a class="dropdown-item" href="#">NodeJS Game Server</a></li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            Ucasino
+        <li class="nav-item dropdown_menu">
+          <a class="nav-link active dropdown-toggle" id="Animationservices" role="button">
+            Art, Design & Animation Services
           </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Utools</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
+          <ul class="sub-menu" aria-labelledby="Animationservices">
+            <li><a class="dropdown-item" href="#">Concept Design</a></li>
+            <li><a class="dropdown-item" href="#">UI/UX Design</a></li>
+            <li><a class="dropdown-item" href="#">Character Design</a></li>
+            <li><a class="dropdown-item" href="#">Animations</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About Us</a>
@@ -104,15 +112,15 @@
       <p data-aos="fade-up">Turn your ideas into profits! Start a new business or expand an existing one – Uplatform is your assured partner on the road to achieving your goals.</p>
       <p data-aos="fade-up"><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
-      <div class="col-lg-6">
-        <!-- <img src="assets/img/banner.png" class="w-100"> -->
+      <!-- <div class="col-lg-6">
+        <img src="assets/img/banner.png" class="w-100">
         <div class="w-100 banner_grid" data-aos="fade-left">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
             <img src="assets/img/01-16.png" class="w-100">
           </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
