--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item dropdown_menu">
-          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Game Development Services</a>
+          <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Mobile Game Development</a></li>
             <li><a class="dropdown-item" href="#">Desktop Game Development</a></li>
@@ -65,7 +65,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
-          <a class="nav-link active dropdown-toggle" id="Technologyservice" role="button">Technology Services </a>
+          <a class="nav-link active dropdown-toggle" id="Technologyservice" role="button">Technologies</a>
           <ul class="sub-menu" aria-labelledby="Technologyservice">
             <li><a class="dropdown-item" href="#">Unity3D Game Development</a></li>
             <li><a class="dropdown-item" href="#">HTML5 Game Development</a></li>
@@ -74,7 +74,7 @@
         </li>
         <li class="nav-item dropdown_menu">
           <a class="nav-link active dropdown-toggle" id="Animationservices" role="button">
-            Art, Design & Animation Services
+            Art & Design
           </a>
           <ul class="sub-menu" aria-labelledby="Animationservices">
             <li><a class="dropdown-item" href="#">Concept Design</a></li>
@@ -87,7 +87,7 @@
           <a class="nav-link" href="#">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact us</a>
+          <a class="nav-link" href="#">Contact Us</a>
         </li>
         <li class="nav-item request_btn">
           <button data-bs-toggle="modal" data-bs-target="#requestQoute">Request a Quote</button>
