--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li class="nav-item dropdown_menu">
           <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Mobile Game Development</a></li>
+            <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
             <li><a class="dropdown-item" href="#">Desktop Game Development</a></li>
             <li><a class="dropdown-item" href="#">Web3 Game Development</a></li>
           </ul>
