--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
             <li><a class="dropdown-item" href="desktop-game-development-company.html">Desktop Game Development</a></li>
-            <li><a class="dropdown-item" href="#">Web3 Game Development</a></li>
+            <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown_menu">
